kubernetes/apps/base/tiny-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tiny-web
  namespace: tiny-web
spec:
  selector:
    app.kubernetes.io/name: tiny-web
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
